# right-of-way

./: .gitignore  LICENSE  PROTOCOL.md  README.md  conftest.py  pyproject.toml  right-of-way-build-spec.md
docs/: SUBMISSION.md  SUBMISSION.txt  decisions.md  weave-instrumentation.md  x-posts.md
docs/reviews/: ws1-physics-review.md  ws3-orchestrator-review.md
row/: __init__.py  api.py  contracts.py  physics.py  scenario.py  scenario_live.py  scenario_real.py
row/agents/: README.md  __init__.py  agent.py  demo.py  geometry.py  hierarchical.py  llm.py  negotiator.py  outcome.py  physics_stub.py  swarm.py  test_acceptance.py
row/eval/: __init__.py  __main__.py  _env.py  leaderboard.py  scorers.py  tracing.py
row/orchestrator/: __init__.py  __main__.py  _doubles.py  _kepler.py  emit.py  interfaces.py  loop.py
row/physics/: __init__.py  core.py  demo.py  mcp_server.py  propagation.py  screening.py
row/physics/tests/: test_physics.py
tests/: test_orchestrator.py  test_scenario_live.py
tests/fixtures/: socrates_sample.html  tle_57023.txt
tools/: make_fixture.py
web/: index.html  package.json  pnpm-lock.yaml  sample_timeline.json  tsconfig.json  types.ts  vite.config.ts
web/public/: timeline-liar.json  timeline-live.json
web/src/: live-sats.ts  main.ts
