[project]
name = "row"
version = "0.1.0"
description = "Right of Way — decentralized orbital collision-avoidance harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",  # WS1 physics core — now the orchestrator's default referee
    "weave>=0.52.41",
]

[project.optional-dependencies]
# Higher-fidelity / TLE propagation and the MCP server wrapper (optional).
physics = [
    "sgp4>=2.23",
    "skyfield>=1.49",
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["row"]
