[project]
name = "row"
version = "0.1.0"
description = "Right of Way — decentralized orbital collision-avoidance harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",       # WS1 physics core — the orchestrator's default referee
    "anthropic>=0.40",   # WS2 ClaudeBrain (real-LLM agents); falls back to MockBrain w/o a key
    "weave>=0.52.41",    # WS4 Weave instrumentation — tracing + eval leaderboard
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
# Higher-fidelity / TLE propagation and the MCP server wrapper (optional).
physics = [
    "sgp4>=2.23",
    "skyfield>=1.49",
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["row"]
